# prototype

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Nextsession.md  README.md  app.py  cspell.json  logging.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: rules.yaml
eval/: golden.jsonl  run_eval.py
index/: chunks.jsonl  docs.jsonl  embeddings.npz
rag/: __init__.py  clients.py  config.py  embed.py  generate.py  pipeline.py  rerank.py  retrieve.py  store.py  usage.py
rag/ingest/: __init__.py  chunk.py  images.py  loaders.py
reports_upload/: README.md
scripts/: build_index.py
tests/: conftest.py  test_build_index.py  test_chunk.py  test_config.py  test_embed.py  test_generate.py  test_images.py  test_loaders.py  test_metrics.py  test_pipeline.py  test_rerank.py  test_retrieve.py  test_store.py  test_usage.py
